<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reikuaa</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">Abrir</string>
    <string name="closeDrawer">Cerrar</string>
    <string name="action_notifications">Notificaciones</string>
    <string name="title_activity_licitacion">Detalle de convocatoria</string>
    <string name="network_error">Error de Red. Toque para reintentar</string>
    <string name="title_activity_busqueda">Buscar</string>
    <string name="action_search">Buscar</string>
    <string name="codigoContratacion">Código de Contratación</string>
    <string name="title_activity_adjudicaciones">Adjudicación</string>
    <string name="proveedor">Proveedor:</string>
    <string name="ruc">RUC:</string>
    <string name="monto_adjudicado">Monto Adjudicado:</string>
    <string name="moneda">Moneda:</string>
    <string name="ver_adjudicacion">Ver Adjudicación</string>
    <string name="suscribrise">Suscribirse</string>
    <string name="desuscribirse">Cancelar suscripción</string>
    <string name="mensaje_convocatoria_404">Esta licitación se encuentra en la etapa de planificación, por lo que aún no cuenta con una convocatoria.</string>
    <string name="title_activity_resultados">Resultados</string>
    <string name="licitaciones">Licitaciones</string>
    <string name="mensaje_adjudicacion_404">La convocatoria seleccionada todavía no fue adjudicada.</string>
    <string name="dncp">DNCP</string>
    <string name="title_activity_configuracion">Configuración</string>
    <string name="title_activity_mis_licitaciones">Mis suscripciones</string>
    <string name="title_activity_splash">Reikuaa</string>
    <string name="sin_resultados">No se encontraron resultados para la búsqueda.</string>
    <string name="error_licitaciones">Error al obtener licitaciones.</string>
    <string name="sin_suscripciones">No tiene ninguna suscripción a licitaciones.</string>

</resources>
